@@ -1,3 +1,5 @@
+* Manage unknown subdivision type
+
 Version 6.0.0 - 2021-05-03
 * Bug fixes (see mercurial logs for details)
 * Rename zip into postal code
